assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 131 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: %empty
    8             | nonempty_feature_list

    9 nonempty_feature_list: feature ';'
   10                      | feature ';' nonempty_feature_list

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr
   14        | error

   15 formal_list: %empty
   16            | nonempty_formal_list

   17 nonempty_formal_list: formal
   18                     | formal ',' nonempty_formal_list

   19 formal: OBJECTID ':' TYPEID

   20 dispatch_expr_list: %empty
   21                   | nonempty_dispatch_expr_list

   22 nonempty_dispatch_expr_list: expr
   23                            | expr ',' nonempty_dispatch_expr_list

   24 block_expr_list: nonempty_block_expr_list

   25 nonempty_block_expr_list: expr ';'
   26                         | expr ';' nonempty_block_expr_list
   27                         | error ';' nonempty_block_expr_list

   28 let_expr_tail: OBJECTID ':' TYPEID IN expr
   29              | OBJECTID ':' TYPEID ASSIGN expr IN expr
   30              | OBJECTID ':' TYPEID ',' let_expr_tail
   31              | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr_tail
   32              | error let_expr_tail

   33 expr: OBJECTID ASSIGN expr
   34     | expr '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr '.' OBJECTID '(' dispatch_expr_list ')'
   36     | OBJECTID '(' dispatch_expr_list ')'
   37     | IF expr THEN expr ELSE expr FI
   38     | WHILE expr LOOP expr POOL
   39     | '{' block_expr_list '}'
   40     | LET let_expr_tail
   41     | CASE expr OF case_list ESAC
   42     | NEW TYPEID
   43     | ISVOID expr
   44     | expr '+' expr
   45     | expr '-' expr
   46     | expr '*' expr
   47     | expr '/' expr
   48     | '~' expr
   49     | expr '<' expr
   50     | expr '=' expr
   51     | expr LE expr
   52     | NOT expr
   53     | '(' expr ')'
   54     | OBJECTID
   55     | INT_CONST
   56     | STR_CONST
   57     | BOOL_CONST

   58 case_list: nonempty_case_list

   59 nonempty_case_list: case ';'
   60                   | case ';' nonempty_case_list

   61 case: OBJECTID ':' TYPEID DARROW expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 34 35 36 53
')' (41) 11 34 35 36 53
'*' (42) 46
'+' (43) 44
',' (44) 18 23 30 31
'-' (45) 45
'.' (46) 34 35
'/' (47) 47
':' (58) 11 12 13 19 28 29 30 31 61
';' (59) 4 5 9 10 25 26 27 59 60
'<' (60) 49
'=' (61) 50
'@' (64) 34
'{' (123) 4 5 11 39
'}' (125) 4 5 11 39
'~' (126) 48
error (256) 6 14 27 32
CLASS (258) 4 5
ELSE (259) 37
FI (260) 37
IF (261) 37
IN (262) 28 29
INHERITS (263) 5
LET (264) 40
LOOP (265) 38
POOL (266) 38
THEN (267) 37
WHILE (268) 38
CASE (269) 41
ESAC (270) 41
OF (271) 41
DARROW (272) 61
NEW (273) 42
ISVOID (274) 43
STR_CONST (275) 56
INT_CONST (276) 55
BOOL_CONST (277) 57
TYPEID (278) 4 5 11 12 13 19 28 29 30 31 34 42 61
OBJECTID (279) 11 12 13 19 28 29 30 31 33 34 35 36 54 61
ASSIGN (280) 13 29 31 33
NOT (281) 52
LE (282) 51
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5
nonempty_feature_list (50)
    on left: 9 10, on right: 8 10
feature (51)
    on left: 11 12 13 14, on right: 9 10
formal_list (52)
    on left: 15 16, on right: 11
nonempty_formal_list (53)
    on left: 17 18, on right: 16 18
formal (54)
    on left: 19, on right: 17 18
dispatch_expr_list (55)
    on left: 20 21, on right: 34 35 36
nonempty_dispatch_expr_list (56)
    on left: 22 23, on right: 21 23
block_expr_list (57)
    on left: 24, on right: 39
nonempty_block_expr_list (58)
    on left: 25 26 27, on right: 24 26 27
let_expr_tail (59)
    on left: 28 29 30 31 32, on right: 30 31 32 40
expr (60)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57, on right: 11 13 22 23 25 26 28 29 31 33 34
    35 37 38 41 43 44 45 46 47 48 49 50 51 52 53 61
case_list (61)
    on left: 58, on right: 41
nonempty_case_list (62)
    on left: 59 60, on right: 58 60
case (63)
    on left: 61, on right: 59 60


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (feature_list)

    feature_list           go to state 14
    nonempty_feature_list  go to state 15
    feature                go to state 16


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 17


State 12

   14 feature: error .

    $default  reduce using rule 14 (feature)


State 13

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 20


State 15

    8 feature_list: nonempty_feature_list .

    $default  reduce using rule 8 (feature_list)


State 16

    9 nonempty_feature_list: feature . ';'
   10                      | feature . ';' nonempty_feature_list

    ';'  shift, and go to state 21


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (feature_list)

    feature_list           go to state 22
    nonempty_feature_list  go to state 15
    feature                go to state 16


State 18

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 15 (formal_list)

    formal_list           go to state 24
    nonempty_formal_list  go to state 25
    formal                go to state 26


State 19

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 27


State 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 21

    9 nonempty_feature_list: feature ';' .
   10                      | feature ';' . nonempty_feature_list

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 9 (nonempty_feature_list)

    nonempty_feature_list  go to state 29
    feature                go to state 16


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 30


State 23

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 24

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 32


State 25

   16 formal_list: nonempty_formal_list .

    $default  reduce using rule 16 (formal_list)


State 26

   17 nonempty_formal_list: formal .
   18                     | formal . ',' nonempty_formal_list

    ','  shift, and go to state 33

    $default  reduce using rule 17 (nonempty_formal_list)


State 27

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 12 (feature)


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

   10 nonempty_feature_list: feature ';' nonempty_feature_list .

    $default  reduce using rule 10 (nonempty_feature_list)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 31

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 32

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 37


State 33

   18 nonempty_formal_list: formal ',' . nonempty_formal_list

    OBJECTID  shift, and go to state 23

    nonempty_formal_list  go to state 38
    formal                go to state 26


State 34

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 37

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 54


State 38

   18 nonempty_formal_list: formal ',' nonempty_formal_list .

    $default  reduce using rule 18 (nonempty_formal_list)


State 39

   37 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 55


State 40

   40 expr: LET . let_expr_tail

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_expr_tail  go to state 58


State 41

   38 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 59


State 42

   41 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 43

   42 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 44

   43 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 62


State 45

   56 expr: STR_CONST .

    $default  reduce using rule 56 (expr)


State 46

   55 expr: INT_CONST .

    $default  reduce using rule 55 (expr)


State 47

   57 expr: BOOL_CONST .

    $default  reduce using rule 57 (expr)


State 48

   33 expr: OBJECTID . ASSIGN expr
   36     | OBJECTID . '(' dispatch_expr_list ')'
   54     | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 54 (expr)


State 49

   52 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 65


State 50

   48 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


State 51

   39 expr: '{' . block_expr_list '}'

    error       shift, and go to state 67
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    block_expr_list           go to state 68
    nonempty_block_expr_list  go to state 69
    expr                      go to state 70


State 52

   53 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 71


State 53

   13 feature: OBJECTID ':' TYPEID ASSIGN expr .
   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 13 (feature)


State 54

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 81


State 55

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   37     | IF expr . THEN expr ELSE expr FI
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 56

   32 let_expr_tail: error . let_expr_tail

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_expr_tail  go to state 83


State 57

   28 let_expr_tail: OBJECTID . ':' TYPEID IN expr
   29              | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   30              | OBJECTID . ':' TYPEID ',' let_expr_tail
   31              | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr_tail

    ':'  shift, and go to state 84


State 58

   40 expr: LET let_expr_tail .

    $default  reduce using rule 40 (expr)


State 59

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   38     | WHILE expr . LOOP expr POOL
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    LOOP  shift, and go to state 85
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 60

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   41     | CASE expr . OF case_list ESAC
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    OF   shift, and go to state 86
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 61

   42 expr: NEW TYPEID .

    $default  reduce using rule 42 (expr)


State 62

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   43     | ISVOID expr .
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 43 (expr)


State 63

   33 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 87


State 64

   36 expr: OBJECTID '(' . dispatch_expr_list ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 20 (dispatch_expr_list)

    dispatch_expr_list           go to state 88
    nonempty_dispatch_expr_list  go to state 89
    expr                         go to state 90


State 65

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr
   52     | NOT expr .

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 52 (expr)


State 66

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | '~' expr .
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 48 (expr)


State 67

   27 nonempty_block_expr_list: error . ';' nonempty_block_expr_list

    ';'  shift, and go to state 91


State 68

   39 expr: '{' block_expr_list . '}'

    '}'  shift, and go to state 92


State 69

   24 block_expr_list: nonempty_block_expr_list .

    $default  reduce using rule 24 (block_expr_list)


State 70

   25 nonempty_block_expr_list: expr . ';'
   26                         | expr . ';' nonempty_block_expr_list
   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 93


State 71

   34 expr: expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr
   53     | '(' expr . ')'

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ')'  shift, and go to state 94


State 72

   51 expr: expr LE . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 95


State 73

   49 expr: expr '<' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 96


State 74

   50 expr: expr '=' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 97


State 75

   44 expr: expr '+' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 98


State 76

   45 expr: expr '-' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 99


State 77

   46 expr: expr '*' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 100


State 78

   47 expr: expr '/' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 101


State 79

   34 expr: expr '@' . TYPEID '.' OBJECTID '(' dispatch_expr_list ')'

    TYPEID  shift, and go to state 102


State 80

   35 expr: expr '.' . OBJECTID '(' dispatch_expr_list ')'

    OBJECTID  shift, and go to state 103


State 81

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 104


State 82

   37 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 105


State 83

   32 let_expr_tail: error let_expr_tail .

    $default  reduce using rule 32 (let_expr_tail)


State 84

   28 let_expr_tail: OBJECTID ':' . TYPEID IN expr
   29              | OBJECTID ':' . TYPEID ASSIGN expr IN expr
   30              | OBJECTID ':' . TYPEID ',' let_expr_tail
   31              | OBJECTID ':' . TYPEID ASSIGN expr ',' let_expr_tail

    TYPEID  shift, and go to state 106


State 85

   38 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 107


State 86

   41 expr: CASE expr OF . case_list ESAC

    OBJECTID  shift, and go to state 108

    case_list           go to state 109
    nonempty_case_list  go to state 110
    case                go to state 111


State 87

   33 expr: OBJECTID ASSIGN expr .
   34     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_expr_list ')'
   35     | expr . '.' OBJECTID '(' dispatch_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . '=' expr
   51     | expr . LE expr
